# apush

./: .gitignore  CMakeLists.txt  Makefile  README.md  builtins.c  builtins.h  exec.h  heap.h  interpreter.c  interpreter.h  main.c  main.h  operations.c  operations.h  parser.c  parser.h  stack.c  stack.h
cmake/: PostInstall.sh
examples/: test.sh
include/: builtins.h  exec.h  expression.h  heap.h  interpreter.h  operations.h  parser.h  stack.h
src/: Makefile  builtins.c  exec.c  heap.c  main.c  parser.c  stack.c
src/scripting/: Makefile  expression.c  heap.c  interpreter.c  main.c  operations.c
tests/: input.py
